[package]
name = "redis"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/mitsuhiko/redis-rs"
documentation = "http://mitsuhiko.github.io/redis-rs/"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies.sha1]
git = "https://github.com/badboy/rust-sha1.git"
rev = "f937a40abf45cbdcc7e6fd38e064862a47f580c6"
#
#[dependencies.url]
#git = "https://github.com/servo/rust-url"

[dependencies]
#sha1 = "*"
url = "*"
rustc-serialize = "*"
